--- a/src/index.css
+++ b/src/index.css
@@ -44,3 +44,57 @@ h1{
   -webkit-filter: invert(100%);
   filter: invert(100%);
 }
+.btn-more{
+  color: #ffffff;
+  border-radius: 8px;
+  border: 1px solid transparent;
+  background-color: #4F46E5;
+  width: 180px;
+  height: 35px;
+}
+.cont-index{
+margin: 150px;
+
+}
+.cont-index button{
+margin-top: 15px;
+cursor: pointer;
+}
+.cont-carrusel{
+  display: flex;
+  align-items: center;
+  border: 1px solid #101463;
+}
+.flechas{
+  font-weight: bold;
+  font-size: 25px;
+  padding: 8px;
+}
+.carrusel-img{
+  height: 360px;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-gap: 10px;
+  justify-content: center;
+  align-items: center;
+  align-content: center;
+}
+.carrusel-img img{
+  height: 100px;
+  border-radius: 5px;
+  margin: 5px;
+  box-sizing: border-box;
+}
+.unique-card{
+  border-radius: 5px;
+  text-align: center;
+  border: 1px solid #000000;
+}
+.unique-card p{
+  margin: 1px 0 4px 0;
+}
+.unique-card:hover{
+  background-color: #000000;
+  color: #ffffff;
+  cursor: pointer;
+}
