--- a/src/index.css
+++ b/src/index.css
@@ -13,6 +13,7 @@ header{
   display: flex;
   align-items: center;
   justify-content: space-between;
+  border-bottom: 1px solid;
 
 }
 .content-ref a{
@@ -23,18 +24,27 @@ header{
   text-decoration: inherit;
 }
 
-h1{
-  font-size: 43px;
+header h1{
+  font-size: 30px;
+}
+.text-header{
+  font-size: 12px;
+  font-weight: bolder;
+  font-style: italic;
+}
+.text-home p{
+  padding: 10px 0 10px 0;
 }
 
 .login-inicio{
+  height: 35px;
   text-align: center;
   color: #ffffff;
   border-radius: 10px;
   border: 1px solid transparent;
-  padding: 0.6em 1.2em;
+  width: 80px;
   font-size: 1em;
-  font-weight: 700;
+  font-weight: 600;
   background-color: #4F46E5;
   cursor: pointer;
 }
@@ -54,7 +64,6 @@ h1{
 }
 .cont-index{
 margin: 150px;
-
 }
 .cont-index button{
 margin-top: 15px;
@@ -63,12 +72,18 @@ cursor: pointer;
 .cont-carrusel{
   display: flex;
   align-items: center;
-  border: 1px solid #101463;
+  box-shadow: -8px 14px 7px -3px rgba(0,0,0,0.47);
+  -webkit-box-shadow: -8px 14px 7px -3px rgba(0,0,0,0.47);
+  -moz-box-shadow: -8px 14px 7px -3px rgba(0,0,0,0.47);
 }
 .flechas{
   font-weight: bold;
-  font-size: 25px;
+  font-size: 28px;
   padding: 8px;
+  cursor: pointer;
+}
+.cont-father{
+  text-align: center;
 }
 .carrusel-img{
   height: 360px;
@@ -94,7 +109,35 @@ cursor: pointer;
   margin: 1px 0 4px 0;
 }
 .unique-card:hover{
-  background-color: #000000;
+  background-color: #615ae6b5;
   color: #ffffff;
   cursor: pointer;
+}
+
+/* Media queries */
+@media only screen and (min-width: 320px) and (max-width: 767px){
+  .text-header{
+    display: none;
+  }
+  .cont-carrusel{
+    flex-direction: column;
+    align-items: center;
+  }
+  .text-home{
+    width: 65%;
+  }
+  .cont-index{
+    margin: 15%;
+    }
+    .carrusel-img img{
+      height: 80px;
+    }
+    .cont-father h2{
+      display: none;
+    }
+    .cont-responsive{
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
 }
