--- a/src/index.css
+++ b/src/index.css
@@ -3,18 +3,34 @@
   padding: 0;
   box-sizing: content-box;
 }
+body{
+  background-color: #eae9fa;
+}
 
 :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
 }
 
 header {
+  backdrop-filter: blur(5px);
+  position: sticky;
+  top: 0px;
+  animation: adjust-header linear both;
+  animation: scroll();
   padding: 10px;
   display: flex;
   align-items: center;
   justify-content: space-between;
-  border-bottom: 1px solid;
+  /* border-bottom: 1px solid; */
 
+}
+
+@keyframes adjust-header{
+  to{
+      background:rgba(226, 119, 247, 0.256);
+      height: 30px;
+  }
+  
 }
 
 .content-ref a {
@@ -89,6 +105,7 @@ header h1 {
 }
 
 .cont-carrusel {
+  margin-bottom: 20px;
   display: flex;
   align-items: center;
   box-shadow: -8px 14px 7px -3px rgba(0, 0, 0, 0.47);
@@ -110,6 +127,7 @@ header h1 {
 }
 
 .carrusel-img {
+  width: 380px;
   height: 360px;
   display: grid;
   grid-template-columns: repeat(2, 1fr);
@@ -120,7 +138,8 @@ header h1 {
 }
 
 .carrusel-img img {
-  height: 100px;
+  max-width: 95%;
+  height: 120px;
   border-radius: 5px;
   margin: 5px;
   box-sizing: border-box;
@@ -128,6 +147,7 @@ header h1 {
 
 .unique-card {
   text-decoration: none;
+  background-color: #ffffff;
   color: #000000;
   border-radius: 5px;
   text-align: center;
@@ -148,20 +168,20 @@ header h1 {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  position: fixed;
+  /* position: fixed; */
   bottom: 0;
   width: 100%;
-  height: 50px;
-  background-color: #f0f0f0;
+  height: 60px;
+  background-color: #716eb3;
 }
 .footer a{
-  color: #8f8c8c;
+  color: #ffffff;
   text-decoration: none;
   padding: 3px;
   margin: 5px;
 }
 .footer p{
-  color: #8f8c8c;
+  color: #ffffff;
   margin: 5px;
 }
 .img-construction {
@@ -189,7 +209,100 @@ header h1 {
 .cont-main-carrusel{
   text-align: center;
 }
+.cards-cities{
+  padding: 4px;
+  margin: 8px;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  height: 220px;
+  width: 220px;
+  background-color: #ffffffb4;
+  border: 2px solid #8a86dd;
+  border-radius: 8px;
+}
+.cards-cities h3{
+  padding: 10px 0 20px 0;
+}
+.cards-cities img{
+  /* probando */
+  max-width: 100%;
+  /* probando */
+  border-radius: 5px;
+  height: 120px;
+}
+.btn-citie a{
+  padding: 5px;
+  margin: 10px;
+  color: #ffffff;
+  background-color: #4F46E5;
+  text-decoration: none;
+  border: 1px solid #4F46E5;
+  border-radius: 4px;
+}
+.cont-cards{
+  margin: 10px 0 30px 0;
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  flex-direction: row;
 
+}
+
+.logo-mt{
+  height: 45px;
+  border-radius: 100px;
+}
+.input{
+  color: #ffffff;
+  text-shadow: 4px 4px 2px rgba(0,0,0,0.6);
+  height: 250px;
+  background-image: url(/img/index.jpg);
+  background-position: center;
+  background-size: cover;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  justify-content: space-around;
+}
+.input input{
+  text-align: center;
+  width: 400px;
+  height: 30px;
+}
+.details-cont{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.details-cont>a{
+  width: 150px;
+  text-align: center;
+  color: #ffffff;
+  background-color: #8a86dd;
+  padding: 5px;
+  margin: 20px 5px 20px 5px; 
+  text-decoration: none;
+  border: 1px solid #4F46E5;
+  border-radius: 5px;
+}
+
+/* Barra de scroll */
+body::-webkit-scrollbar {
+  width: var(--scroll-size, 12px);
+  height: var(--scroll-size, 12px);
+}
+body::-webkit-scrollbar-track {
+  background-color: var(--scroll-track, transparent);
+  border-radius: var(--scroll-track-radius, var(--scroll-radius));
+}
+body::-webkit-scrollbar-thumb {
+  background-color: var(--scroll-thumb-color, rgb(141, 45, 251));
+  background-image: var(--scroll-thumb, none);
+  border-radius: var(--scroll-thumb-radius, var(--scroll-radius));
+}
+/*  */
 
 /* Media queries */
 @media only screen and (min-width: 320px) and (max-width: 768px) {
