--- a/src/index.css
+++ b/src/index.css
@@ -287,6 +287,17 @@ header h1 {
   border: 1px solid #4F46E5;
   border-radius: 5px;
 }
+.cards-details{
+  text-align: center;
+}
+.cards-details p{
+  margin: 20px 30px 10px 30px;
+}
+.cards-details img{
+  margin: 20px;
+  height: 250px;
+  border-radius: 5px;
+}
 
 /* Barra de scroll */
 body::-webkit-scrollbar {
