--- a/src/index.css
+++ b/src/index.css
@@ -27,7 +27,7 @@ header {
 
 @keyframes adjust-header{
   to{
-      background:rgba(226, 119, 247, 0.256);
+      background:rgba(178, 94, 195, 0.416);
       height: 30px;
   }
   
@@ -37,7 +37,7 @@ header {
   padding-right: 15px;
   font-size: 20px;
   font-weight: 600;
-  color: #000000;
+  color: #fcfcfc;
   text-decoration: inherit;
 }
 .menu{
@@ -61,14 +61,21 @@ header h1 {
 .login-inicio, .login-responsive {
   height: 35px;
   text-align: center;
-  color: #ffffff;
-  border-radius: 10px;
+  color: #ffffff; 
   border: 1px solid transparent;
   width: 80px;
-  font-size: 1em;
+ 
   font-weight: 600;
   background-color: #4F46E5;
   cursor: pointer;
+}
+.login-inicio{
+  font-size: .8em;
+  border-radius: 10px;
+}
+.login-responsive{
+   font-size: 1em;
+   border-radius: 30px;
 }
 
 .user-logo {
@@ -168,7 +175,6 @@ header h1 {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  /* position: fixed; */
   bottom: 0;
   width: 100%;
   height: 60px;
@@ -242,12 +248,39 @@ header h1 {
   border-radius: 4px;
 }
 .cont-cards{
-  margin: 10px 0 30px 0;
+  margin: 10px 0 80px 0;
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
   flex-direction: row;
 
+}
+/* LOADER */
+
+#loader {
+  margin: 0 auto;
+  border: 16px solid #f0a9c4;
+  border-top: 16px solid #ba8dfe;
+  border-radius: 50%;
+  width: 80px;
+  height: 80px;
+  animation: spin 2s linear infinite;
+}
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
+}
+
+.no-matches{
+  height: 250px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.no-matches img{
+  border-radius: 5px;
+  height: 200px;
 }
 
 .logo-mt{
@@ -266,9 +299,9 @@ header h1 {
   flex-direction: column;
   justify-content: space-around;
 }
-.input input{
+.search{
   text-align: center;
-  width: 400px;
+  width: 250px;
   height: 30px;
 }
 .details-cont{
@@ -298,6 +331,58 @@ header h1 {
   height: 250px;
   border-radius: 5px;
 }
+.formulario{
+  height: 90vh;
+  background-image: url(/img/backgroundSign.jpg);
+  background-size:cover ;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+
+}
+form{
+  width: 40%;
+  border: 1px solid #000000;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  /* probando */
+  backdrop-filter: blur(4px) saturate(173%);
+  -webkit-backdrop-filter: blur(4px) saturate(173%);
+  background-color: rgba(255, 255, 255, 0.23);
+  border-radius: 12px;
+  border: 1px solid rgba(209, 213, 219, 0.3);
+}
+form a{
+  color: #fcfcfc;
+  text-decoration: none;
+}
+.form-in{
+    height: 45%;
+}
+.form-up{
+  height: 80%;
+}
+form h3{
+  padding: 8px;
+}
+input[type="text"], input[type="button"],input[type="password"]{
+  margin: 5px;
+  padding: 7px;
+  width: 65%;
+}
+input[type="button"]{
+  color: #ffffff;
+  background-color: #716eb3;
+  border-radius: 4px;
+  border: none;
+}
+input[type="button"]:hover{
+  cursor: pointer;
+  background-color: #4F46E5;
+}
+
 
 /* Barra de scroll */
 body::-webkit-scrollbar {
@@ -357,7 +442,7 @@ body::-webkit-scrollbar-thumb {
   }
   .login-responsive{
     display: block;
-    width: 30px;
+    width: 35px;
     border-radius: 100%;
   }
   .user-logo{
@@ -377,9 +462,9 @@ body::-webkit-scrollbar-thumb {
   .cont-anchor{
     display: flex;
   }
-  .footer{
+  /* .footer{
     display: none;
-  }
+  } */
   .btn-more{
     margin: 20px;
     align-items: center;
