--- a/src/index.css
+++ b/src/index.css
@@ -309,7 +309,7 @@ header h1 {
   flex-direction: column;
   align-items: center;
 }
-.details-cont>a{
+.details-cont>a, .view-itineraries{
   width: 150px;
   text-align: center;
   color: #ffffff;
@@ -319,6 +319,10 @@ header h1 {
   text-decoration: none;
   border: 1px solid #4F46E5;
   border-radius: 5px;
+}
+.view-itineraries{
+  height: 25px;
+  cursor: pointer;
 }
 .cards-details{
   text-align: center;
@@ -331,6 +335,51 @@ header h1 {
   height: 250px;
   border-radius: 5px;
 }
+
+.cont-features{
+  padding: 10px;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+}
+.cont-features img{
+  padding: 20px;
+  height: 220px;
+  border-radius: 10px;
+}
+.itineray-card{
+  border: 1px solid;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.itineray-card img{
+  height: 250px;
+}
+.features-img{
+  padding: 10px;
+  display: flex;
+  flex-direction: row;
+}
+.itinery-detail{
+  color: #000000;
+  width: 250px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+}
+.itinery-detail button{
+  color: #000000;
+  width: 50px;
+  text-align: center;
+  padding: 5px;
+  height: 25px;
+  cursor: pointer;
+  border: 1px solid #4F46E5;
+  border-radius: 5px;
+}
+
 .formulario{
   height: 90vh;
   background-image: url(/img/backgroundSign.jpg);
